--- a/SteppersControlApp/SteppersControlApp/ControllersViews/NeedleControllerView.resx
+++ b/SteppersControlApp/SteppersControlApp/ControllersViews/NeedleControllerView.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="buttonLoadHome.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonHomeRotator.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAM9JREFUSEvt
         zLERgkAQhWESEnJiWqADqqAIurEOu7ACWzA2NzHBt87vzayDLocXGPDN7Azce7vVrqh5ng82/Jajo7Xm
@@ -127,7 +127,7 @@
         Rt8hSnh2iGL0HaKEZ4do91eq6gGWofUdWmOD4QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="buttonShuttleHome.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonHomeLift.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAM9JREFUSEvt
         zLERgkAQhWESEnJiWqADqqAIurEOu7ACWzA2NzHBt87vzayDLocXGPDN7Azce7vVrqh5ng82/Jajo7Xm
