--- a/SteppersControlApp/SteppersControlApp/Forms/EditTubeDialogForm.resx
+++ b/SteppersControlApp/SteppersControlApp/Forms/EditTubeDialogForm.resx
@@ -118,34 +118,38 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="buttonAddTube.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="removeStageButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAQlJREFUSEvd
-        lT0OgkAUhOkIB4NwAxtOAsa72BCPoyWd0QuYKK04b3fMQ+P+gKHQL5nEvJnZR4yyyX8zDEMKraAttIdu
-        0AU6cCZeyvg0UCyhIxRCMiVrcaDQmGo8d6hh3Y8ETWUe/iUI5JA8zVykm/O4V2Bk0FlSLhiVrA85I2NU
-        wbAytgdGQwuEilEFw5313DAas2DHqIJhZz03jMYs6BhVMOytp9AKwviYnpaC4dV6Cq0gjI+50lIwXPwr
-        aq3nhtGYBS2jCoaL/0zlzXkytgNGQwvkj/b5DQtjuVfFEwRqE51HzWP8ILi2+WjkyTesx4FCAcVeOAVr
-        00Dx/cqU61Ikn7+7Mn+EJHkAP2efLRzY+VwAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAX9JREFUSEvd
+        lU1OAkEUhIGYEDZgogcR3WtcQFir0Q0H0CMoxgvoJdwQjqNLdv5cwARJXPmsmledRh2Hblnpl1RC6r3q
+        GTo9r2v/GzNrQifQLXQHvUIv0L081ppqzwPBAfQALYM9A8XSQGBURJ1n6Abag9ahTf2+hlgj79BI8WrY
+        WETMZtABVFfpG6g1oGP1kuqHoKEH8W3eoB3ZS2GvMsz2ZH8GhRYU/vKZ7GSQOfVosUZLdgTmsCibPUIN
+        2ckwA4VDMZQdgTnxml3IyoZZX8ImsiIwp16zbVnZINv1JWwqKwJz7jXryKKXhNrZ33HH5rIiMMNRa8v6
+        zQPa7thMVgRm2KKurGyQ3fIlyrdo7DU7l5UNs76EjWVFYC4e0zXZyTCjLCk9ppycT0V59Q+tfMKisDgq
+        ko8re5X5eVQE0BA+Fp6qQ6hq2NWhI/WStI8UjZfeX8Bt47jehTiqN6B9eWFL+eZXiqeBQB9KvXD6iuWB
+        4Ncrk9clxd+rXZl/hFrtA7zCzds7Ht20AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="buttonRemoveTube.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="addStageButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAHpJREFUSEvt
-        zjEOgCAQBVGOwo04vq3hIrjIVBY6GxsLX7IN+ZNQfq+NMWrcHnc13yqznNXnkT9jn0b+EXxKI/PoNDKP
-        TiPz6DQyj04j8+g0Mo9OI/PoNDKPTiPz6DQyj04j8+g0Mi+avlKlk3kRtbjtzO/NTSP7ZZVyAOU1KRj4
-        2NW5AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAZpJREFUSEvd
+        lU1OAkEUhAdCQtiAiR5EdK9xAWGtRjccQI8AGC+gl3BDOI4u2flzARMkceWz3rxqm2ZmegZZ6ZdUglX1
+        aOz09CT/GxFpQpfQA/QIfUDv0BM9zZqsbwYGB9AzVIZ2BhyrBgYm6ajxBt1Dx9AOtMfPd5Bmyhc04Xgc
+        LaYjIgvoFKoxyoCsDl2wq8QXQaEH6a/5hA5pl6Jdzuhsj3YIghbk/uVr2gHMhH8GwL6yNP2OFm0PzGEa
+        i7xAddoBFhcuoNvlDsWQtgfmzDIZ08rAPHcBBdHYGjKj5YE5t0wOaGVgHlugaw2Z0/LAXFomHVo/X1gG
+        69rvmCNLWh6Y7qi1af1mgbY5sqDlgem2qEsrA/PYFu1bI3+LppbJiFYG5rEFRtaQKS0PzNVj2qAdYHH+
+        ArAbkM4qucdUb87XNN7+Qcu/YRGsXhWFx3Ud7XKm+KpwoOAeFj1VZ1DssqtB5+wqhQ9pAIo31k/RbdPr
+        +gjSq3oXOqHntlR/+S3Hq4GBPlT1hdPn2GZgcP2Vqa9LlX7e7pX5R0iSb6rADapMc4FFAAAAAElFTkSu
+        QmCC
 </value>
   </data>
-  <metadata name="stageBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="buttonEditTube.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="saveStageChangesButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAALVJREFUSEvt
-        kTEKAjEQAPMnG7GysbI8BCsf4SesfaKdDxARReNssrnTMxbuJYVwAwNHspktzo1Ux3vf4BH3elQOoiu8
-        Y2KnV2UguMZHSHds9doOkRk2+t1fcghDVghI/Iw3XOpZWnLCaRi0wOMUT7wu2eAkDFrgcT+eaJeYIfAt
-        LgxbwOM5Vo1fpJThf+NXrBpf6OjvyGOsExc0kmN4XIitD8rEhdh7o1xciM0W+Rfl4iN5nHsC3F/7NdRh
-        LsoAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAL5JREFUSEvt
+        1UsKwkAQhOEcI+Khch0fIIqHdC9ZeIuxh/4dhJpJTBp3+aBBp8rupd1mkZTSYPOwWerKimlWfHl/lfkj
+        FBNfZ1H/Nn2EUuRA1j5CIXqg/Xvy/x+IYp0iD2OdIg9jnSIPY50ib7nY9MwtP7SwTpHXHKkU9nbwSFFR
+        5DU9lSK/eaSoKPKaHZUiv3mkqCjymjOVwt5OHikqirzlbrNn8ucm1inLRq+EPFmnLFz7h/ORfzuwbvOL
+        rnsDLXUEFcb8R94AAAAASUVORK5CYII=
 </value>
   </data>
 </root>
